--- a/src/ListenTogether/Controls/Player.xaml
+++ b/src/ListenTogether/Controls/Player.xaml
@@ -7,106 +7,110 @@
         <ContentView x:Name="MainBlock">
             <OnPlatform x:TypeArguments="View">
                 <On Platform="UWP, macOS">
-                    <StackLayout Orientation="Horizontal">
-                        <StackLayout HorizontalOptions="Start"
+                    <Grid>
+                        <Line Stroke="{AppThemeBinding Dark={StaticResource DarkLine},Light={StaticResource LightLine}}"
+                              X2="4000" />
+                        <StackLayout Orientation="Horizontal"
+                                     Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,10,10,0',iOS='10,10,10,0'}">
+                            <StackLayout HorizontalOptions="Start"
                                      Orientation="Horizontal"
                                      WidthRequest="250">
 
-                            <Image x:Name="ImgCurrentMusic"
+                                <Image x:Name="ImgCurrentMusic"
                                    HorizontalOptions="Start"
                                    WidthRequest="60">
-                            </Image>
-                            <StackLayout Margin="10,0,0,0"
+                                </Image>
+                                <StackLayout Margin="10,0,0,0"
                                          HorizontalOptions="FillAndExpand">
-                                <Label x:Name="LblMusicName"
+                                    <Label x:Name="LblMusicName"
                                        Margin="0,10,0,0"
                                        VerticalOptions="Start"
                                        LineBreakMode="TailTruncation"
                                        TextColor="{AppThemeBinding Light={StaticResource LightText}, Dark={StaticResource DarkText}}"/>
-                                <Label x:Name="LblMusicArtistAndAlbum"
+                                    <Label x:Name="LblMusicArtistAndAlbum"
                                        Margin="0,0,0,10"
                                        VerticalOptions="EndAndExpand"
                                        Style="{StaticResource Explain}"
                                        LineBreakMode="TailTruncation"/>
-                                <Label x:Name="LblMusicArtist"
+                                    <Label x:Name="LblMusicArtist"
                                        IsVisible="False"/>
 
+                                </StackLayout>
                             </StackLayout>
-                        </StackLayout>
-                        <StackLayout HorizontalOptions="CenterAndExpand"
+                            <StackLayout HorizontalOptions="CenterAndExpand"
                                      MaximumWidthRequest="450">
 
-                            <!--播放按钮-->
-                            <StackLayout Orientation="Horizontal" 
+                                <!--播放按钮-->
+                                <StackLayout Orientation="Horizontal" 
                                          HorizontalOptions="Center"
                                          Spacing="28" >
 
-                                <Image x:Name="ImgRepeat"                                       
+                                    <Image x:Name="ImgRepeat"                                       
                                        WidthRequest="20" 
                                        HeightRequest="20"
                                        VerticalOptions="Center"
                                        HorizontalOptions="Center"
                                        Aspect="AspectFill">
-                                    <Image.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="ImgRepeat_Tapped"/>
-                                    </Image.GestureRecognizers>
-                                </Image>
+                                        <Image.GestureRecognizers>
+                                            <TapGestureRecognizer Tapped="ImgRepeat_Tapped"/>
+                                        </Image.GestureRecognizers>
+                                    </Image>
 
-                                <Image x:Name="ImgBack"
+                                    <Image x:Name="ImgBack"
                                        Source="{AppThemeBinding Dark='back_dark.png',Light='back.png'}"
                                        WidthRequest="20" 
                                        HeightRequest="20"
                                        VerticalOptions="Center"
                                        HorizontalOptions="Center"
                                        Aspect="AspectFill">
-                                    <Image.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Previous_Tapped"/>
-                                    </Image.GestureRecognizers>
-                                </Image>
+                                        <Image.GestureRecognizers>
+                                            <TapGestureRecognizer Tapped="Previous_Tapped"/>
+                                        </Image.GestureRecognizers>
+                                    </Image>
 
-                                <Image x:Name="ImgPlay"
+                                    <Image x:Name="ImgPlay"
                                        WidthRequest="40"
                                        HeightRequest="40"
                                        VerticalOptions="Center"
                                        HorizontalOptions="Center"
                                        Aspect="AspectFill">
-                                    <Image.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="ImgPlay_Tapped"></TapGestureRecognizer>
-                                    </Image.GestureRecognizers>
-                                </Image>
+                                        <Image.GestureRecognizers>
+                                            <TapGestureRecognizer Tapped="ImgPlay_Tapped"></TapGestureRecognizer>
+                                        </Image.GestureRecognizers>
+                                    </Image>
 
-                                <Image x:Name="ImgNext"
+                                    <Image x:Name="ImgNext"
                                        Source="{AppThemeBinding Dark='next_dark.png',Light='next.png'}"
                                        WidthRequest="20"
                                        HeightRequest="20"
                                        VerticalOptions="Center"
                                        HorizontalOptions="Center"
                                        Aspect="AspectFill">
-                                    <Image.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Next_Tapped"/>
-                                    </Image.GestureRecognizers>
-                                </Image>
+                                        <Image.GestureRecognizers>
+                                            <TapGestureRecognizer Tapped="Next_Tapped"/>
+                                        </Image.GestureRecognizers>
+                                    </Image>
 
-                                <Image x:Name="ImgOther"
+                                    <Image x:Name="ImgOther"
                                        Source="{AppThemeBinding Dark='puzzled_dark.png',Light='puzzled.png'}"
                                        WidthRequest="20"
                                        HeightRequest="20"
                                        VerticalOptions="Center"
                                        HorizontalOptions="Center"
                                        Aspect="AspectFill">
-                                    <Image.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Puzzled_Tapped"/>
-                                    </Image.GestureRecognizers>
-                                </Image>
-                            </StackLayout>
+                                        <Image.GestureRecognizers>
+                                            <TapGestureRecognizer Tapped="Puzzled_Tapped"/>
+                                        </Image.GestureRecognizers>
+                                    </Image>
+                                </StackLayout>
 
-                            <!--进度条-->
-                            <StackLayout Orientation="Horizontal"
+                                <!--进度条-->
+                                <StackLayout Orientation="Horizontal"
                                          HeightRequest="30">
-                                <Label x:Name="LblPositionMilliseconds"
+                                    <Label x:Name="LblPositionMilliseconds"
                                        HorizontalOptions="Start"
                                        VerticalTextAlignment="Center"/>
-                                <Slider x:Name="SliderPlayProgress"
+                                    <Slider x:Name="SliderPlayProgress"
                                         HorizontalOptions="FillAndExpand"
                                         VerticalOptions="Center"
                                         Minimum="0"
@@ -114,28 +118,28 @@
                                         Margin="10,0,10,0"
                                         DragStarted="SliderPlayProgress_DragStarted"
                                         DragCompleted="SliderPlayProgress_DragCompleted">
-                                </Slider>
-                                <Label x:Name="LblDurationMilliseconds"
+                                    </Slider>
+                                    <Label x:Name="LblDurationMilliseconds"
                                        HorizontalOptions="End"
                                        VerticalTextAlignment="Center"/>
+                                </StackLayout>
                             </StackLayout>
-                        </StackLayout>
-                        <StackLayout HorizontalOptions="End"
+                            <StackLayout HorizontalOptions="End"
                                      Orientation="Horizontal"
                                      WidthRequest="250">
 
-                            <Image x:Name="ImgSoundOff"
+                                <Image x:Name="ImgSoundOff"
                                    VerticalOptions="Center"
                                    HorizontalOptions="EndAndExpand"
                                    HeightRequest="20"
                                    WidthRequest="20" 
                                    Aspect="AspectFill">
-                                <Image.GestureRecognizers>
-                                    <TapGestureRecognizer Tapped="ImgSoundOff_Tapped"/>
-                                </Image.GestureRecognizers>
-                            </Image>
+                                    <Image.GestureRecognizers>
+                                        <TapGestureRecognizer Tapped="ImgSoundOff_Tapped"/>
+                                    </Image.GestureRecognizers>
+                                </Image>
 
-                            <Slider x:Name="SliderVolume"
+                                <Slider x:Name="SliderVolume"
                                     Margin="10,0,20,0"
                                     WidthRequest="90"
                                     HorizontalOptions="End"
@@ -143,8 +147,10 @@
                                     Minimum="0"
                                     Maximum="1"
                                     ValueChanged="SliderVolume_ValueChanged"/>
+                            </StackLayout>
                         </StackLayout>
-                    </StackLayout>
+                    </Grid>
+
                 </On>
                 <On Platform="Android,iOS">
                     <StackLayout>
