--- a/src/ListenTogether/Pages/MyFavoritePage.xaml
+++ b/src/ListenTogether/Pages/MyFavoritePage.xaml
@@ -4,8 +4,7 @@
              xmlns:viewmodels="clr-namespace:ListenTogether.ViewModels"
              xmlns:controls="clr-namespace:ListenTogether.Controls"
              x:Class="ListenTogether.Pages.MyFavoritePage"
-             Title="我的歌单"
-             BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBackground},Light={StaticResource LightBackground}}">
+             Title="我的歌单">
 
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -19,57 +18,64 @@
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
-    <StackLayout Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
 
-        <StackLayout Margin="0,0,0,20"
+    <Grid BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBackground},Light={StaticResource LightBackground}}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
+
+        <StackLayout Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
+
+            <StackLayout Margin="0,0,0,20"
                      Orientation="Horizontal"
                      VerticalOptions="Start">
 
-            <Label Text="我的歌单"
+                <Label Text="我的歌单"
                    VerticalTextAlignment="Center"
                    Style="{StaticResource Title}"/>
 
-            <ActivityIndicator Margin="10,0,0,0"
+                <ActivityIndicator Margin="10,0,0,0"
                                IsRunning="{Binding IsBusy}"
                                HeightRequest="20"
                                WidthRequest="20"
                                VerticalOptions="CenterAndExpand"/>
-            <StackLayout Margin="20,0,0,0"
+                <StackLayout Margin="20,0,0,0"
                          Orientation="Horizontal"
                          HorizontalOptions="{OnPlatform UWP=Start,MacCatalyst=Start,Android=EndAndExpand,iOS=EndAndExpand}"
                          VerticalOptions="End">
-                <StackLayout.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding MyFavoriteAddCommand}"/>
-                </StackLayout.GestureRecognizers>
-                <Image Source="{AppThemeBinding Dark='plus_dark.png',Light='plus.png'}"
+                    <StackLayout.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding MyFavoriteAddCommand}"/>
+                    </StackLayout.GestureRecognizers>
+                    <Image Source="{AppThemeBinding Dark='plus_dark.png',Light='plus.png'}"
                        HeightRequest="20"
                        WidthRequest="20">
-                </Image>
-                <Label Text="新建歌单"
+                    </Image>
+                    <Label Text="新建歌单"
                        IsVisible="{OnPlatform UWP=True,MacCatalyst=True,Android=False,iOS=False}"
                        VerticalTextAlignment="Center"/>
+                </StackLayout>
             </StackLayout>
-        </StackLayout>
 
-        <CollectionView VerticalOptions="FillAndExpand"
+            <CollectionView VerticalOptions="FillAndExpand"
                         ItemsSource="{Binding FavoriteList}"
                         IsVisible="{Binding IsNotBusy}">
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
 
-                    <StackLayout>
-                        <OnPlatform x:TypeArguments="View">
-                            <On Platform="UWP, macOS">
-                                <Grid Margin="0,0,0,20"
+                        <StackLayout>
+                            <OnPlatform x:TypeArguments="View">
+                                <On Platform="UWP, macOS">
+                                    <Grid Margin="0,0,0,20"
                                       RowDefinitions="auto,auto"
                                       ColumnDefinitions="35,65,*">
-                                    <Grid.GestureRecognizers>
-                                        <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:MyFavoritePageViewModel}}, Path=EnterMyFavoriteDetailCommand}"
+                                        <Grid.GestureRecognizers>
+                                            <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:MyFavoritePageViewModel}}, Path=EnterMyFavoriteDetailCommand}"
                                                               CommandParameter="{Binding .}">
-                                        </TapGestureRecognizer>
-                                    </Grid.GestureRecognizers>
+                                            </TapGestureRecognizer>
+                                        </Grid.GestureRecognizers>
 
-                                    <Image Grid.Row="0"
+                                        <Image Grid.Row="0"
                                            Grid.RowSpan="2"
                                            Grid.Column="0"
                                            x:Name="ImgPlayAll"
@@ -79,13 +85,13 @@
                                            HeightRequest="28"
                                            VerticalOptions="Center"
                                            HorizontalOptions="Center">
-                                        <Image.GestureRecognizers>
-                                            <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:MyFavoritePageViewModel}}, Path=PlayAllMusicsCommand}"
+                                            <Image.GestureRecognizers>
+                                                <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:MyFavoritePageViewModel}}, Path=PlayAllMusicsCommand}"
                                                                   CommandParameter="{Binding .}"/>
-                                        </Image.GestureRecognizers>
-                                    </Image>
+                                            </Image.GestureRecognizers>
+                                        </Image>
 
-                                    <Frame Grid.Row="0"
+                                        <Frame Grid.Row="0"
                                            Grid.RowSpan="2"
                                            Grid.Column="1"
                                            BorderColor="Transparent"
@@ -95,40 +101,40 @@
                                            IsClippedToBounds="True"
                                            HorizontalOptions="Center"
                                            VerticalOptions="Center">
-                                        <Image Style="{StaticResource MyFavoriteImg}"
+                                            <Image Style="{StaticResource MyFavoriteImg}"
                                                Aspect="AspectFill"
                                                Margin="-20"
                                                HeightRequest="48"
                                                WidthRequest="48" />
-                                    </Frame>
+                                        </Frame>
 
-                                    <Label Grid.Row="0"
+                                        <Label Grid.Row="0"
                                            Grid.Column="2"
                                            Text="{Binding Name}"
                                            LineBreakMode="TailTruncation"/>
 
-                                    <Label Grid.Row="1"
+                                        <Label Grid.Row="1"
                                            Grid.Column="2"
                                            Style="{StaticResource Explain}"
                                            LineBreakMode="TailTruncation">
-                                        <MultiBinding StringFormat="共 {0} 首歌">
-                                            <Binding Path="MusicCount"></Binding>
-                                        </MultiBinding>
-                                    </Label>
-                                </Grid>
-                            </On>
+                                            <MultiBinding StringFormat="共 {0} 首歌">
+                                                <Binding Path="MusicCount"></Binding>
+                                            </MultiBinding>
+                                        </Label>
+                                    </Grid>
+                                </On>
 
-                            <On Platform="Android,iOS">
-                                <Grid Margin="0,0,0,20"
+                                <On Platform="Android,iOS">
+                                    <Grid Margin="0,0,0,20"
                                       RowDefinitions="auto,auto"
                                       ColumnDefinitions="60,*,40">
-                                    <Grid.GestureRecognizers>
-                                        <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:MyFavoritePageViewModel}}, Path=EnterMyFavoriteDetailCommand}"
+                                        <Grid.GestureRecognizers>
+                                            <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:MyFavoritePageViewModel}}, Path=EnterMyFavoriteDetailCommand}"
                                                               CommandParameter="{Binding .}">
-                                        </TapGestureRecognizer>
-                                    </Grid.GestureRecognizers>
+                                            </TapGestureRecognizer>
+                                        </Grid.GestureRecognizers>
 
-                                    <Frame Grid.Row="0"
+                                        <Frame Grid.Row="0"
                                            Grid.RowSpan="2"
                                            Grid.Column="0"
                                            BorderColor="Transparent"
@@ -138,28 +144,28 @@
                                            IsClippedToBounds="True"
                                            HorizontalOptions="Center"
                                            VerticalOptions="Center">
-                                        <Image Style="{StaticResource MyFavoriteImg}"
+                                            <Image Style="{StaticResource MyFavoriteImg}"
                                                Aspect="AspectFill"
                                                Margin="-20"
                                                HeightRequest="48"
                                                WidthRequest="48" />
-                                    </Frame>
+                                        </Frame>
 
-                                    <Label Grid.Row="0"
+                                        <Label Grid.Row="0"
                                            Grid.Column="1"
                                            Text="{Binding Name}"
                                            LineBreakMode="TailTruncation"/>
 
-                                    <Label Grid.Row="1"
+                                        <Label Grid.Row="1"
                                            Grid.Column="1"
                                            Style="{StaticResource Explain}"
                                            LineBreakMode="TailTruncation">
-                                        <MultiBinding StringFormat="共 {0} 首歌">
-                                            <Binding Path="MusicCount"></Binding>
-                                        </MultiBinding>
-                                    </Label>
+                                            <MultiBinding StringFormat="共 {0} 首歌">
+                                                <Binding Path="MusicCount"></Binding>
+                                            </MultiBinding>
+                                        </Label>
 
-                                    <Image Grid.Row="0"
+                                        <Image Grid.Row="0"
                                            Grid.RowSpan="2"
                                            Grid.Column="2"
                                            Source="{Binding Source, Source={x:Reference ImgPlayAll}}"
@@ -168,23 +174,23 @@
                                            HeightRequest="28"
                                            VerticalOptions="Center"
                                            HorizontalOptions="Center">
-                                        <Image.GestureRecognizers>
-                                            <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:MyFavoritePageViewModel}}, Path=PlayAllMusicsCommand}"
+                                            <Image.GestureRecognizers>
+                                                <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:MyFavoritePageViewModel}}, Path=PlayAllMusicsCommand}"
                                                                   CommandParameter="{Binding .}"/>
-                                        </Image.GestureRecognizers>
-                                    </Image>
-                                </Grid>
-                            </On>
-                        </OnPlatform>
-                    </StackLayout>
+                                            </Image.GestureRecognizers>
+                                        </Image>
+                                    </Grid>
+                                </On>
+                            </OnPlatform>
+                        </StackLayout>
 
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
-
-        <controls:Player x:Name="player"
-                         Margin="0,20,0,0"
-                         VerticalOptions="End"
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </StackLayout>
+        <controls:Player Grid.Row="1" 
+                         x:Name="player"
                          IsMiniWhenPhone="True"/>
-    </StackLayout>
+    </Grid>
+
 </ContentPage>
