--- a/src/ListenTogether/Pages/PlayingPage.xaml
+++ b/src/ListenTogether/Pages/PlayingPage.xaml
@@ -7,8 +7,7 @@
              xmlns:JiuLing="clr-namespace:JiuLing.Controls.Maui.Handlers.GaussianImage;assembly=JiuLing.Controls.Maui"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="ListenTogether.Pages.PlayingPage"
-             Title="正在播放"
-             BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBackground},Light={StaticResource LightBackground}}">
+             Title="正在播放">
     <ContentPage.Resources>
         <Style x:Key="LyricItem" TargetType="Label">
             <Setter Property="TextColor"
@@ -45,86 +44,88 @@
         </StackLayout>
 
         <StackLayout AbsoluteLayout.LayoutBounds="0,0,1,1" AbsoluteLayout.LayoutFlags="All" 
-                     Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
-            <StackLayout Margin="0,0,0,20"
+                     >
+            <StackLayout VerticalOptions="FillAndExpand"
+                         Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
+                <StackLayout Margin="0,0,0,20"
                      Orientation="Horizontal"
                      VerticalOptions="Start">
-                <Label Text="正在播放"
+                    <Label Text="正在播放"
                    VerticalTextAlignment="Center"
                    Style="{StaticResource Title}"/>
-            </StackLayout>
+                </StackLayout>
 
-            <Label Text="当前未播放歌曲"
+                <Label Text="当前未播放歌曲"
                HorizontalTextAlignment="Center"
                IsVisible="{Binding CurrentMusic, Converter={StaticResource IsEqualConverter}}"/>
 
-            <StackLayout VerticalOptions="FillAndExpand"
+                <StackLayout VerticalOptions="FillAndExpand"
                      IsVisible="{Binding CurrentMusic, Converter={StaticResource IsNotEqualConverter}}">
 
-                <!--<StackLayout AbsoluteLayout.LayoutBounds="0,0,1,1" AbsoluteLayout.LayoutFlags="All" BackgroundColor="#000000">
+                    <!--<StackLayout AbsoluteLayout.LayoutBounds="0,0,1,1" AbsoluteLayout.LayoutFlags="All" BackgroundColor="#000000">
                     <services:BlurredImage Opacity="0.3" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Aspect="Fill" Source="{Binding CurrentMusic.ImageUrl}"/>
                 </StackLayout>-->
 
-                <StackLayout Orientation="Horizontal"
+                    <StackLayout Orientation="Horizontal"
                          HorizontalOptions="CenterAndExpand">
 
-                    <Border Padding="4,0,4,0"
+                        <Border Padding="4,0,4,0"
                         StrokeThickness="1"
                         HorizontalOptions="Center">
-                        <Border.StrokeShape>
-                            <RoundRectangle CornerRadius="5" />
-                        </Border.StrokeShape>
-                        <Label Text="{Binding CurrentMusic.PlatformName}"
+                            <Border.StrokeShape>
+                                <RoundRectangle CornerRadius="5" />
+                            </Border.StrokeShape>
+                            <Label Text="{Binding CurrentMusic.PlatformName}"
                            FontSize="16"
                            Style="{StaticResource Explain}"/>
-                    </Border>
+                        </Border>
 
-                    <Label Margin="10,0,0,0"
+                        <Label Margin="10,0,0,0"
                        Text="{Binding CurrentMusic.Name}"
                        TextColor="{AppThemeBinding Light={StaticResource LightText}, Dark={StaticResource DarkText}}"
                        FontSize="22"
                        HorizontalTextAlignment="Center"/>
-                </StackLayout>
+                    </StackLayout>
 
-                <StackLayout VerticalOptions="Start"
+                    <StackLayout VerticalOptions="Start"
                          Margin="0,10,0,20">
-                    <Label TextColor="{AppThemeBinding Light={StaticResource LightTextSecond}, Dark={StaticResource DarkTextSecond}}"
+                        <Label TextColor="{AppThemeBinding Light={StaticResource LightTextSecond}, Dark={StaticResource DarkTextSecond}}"
                        FontSize="16"
                        HorizontalTextAlignment="Center">
-                        <MultiBinding StringFormat="{}{0} - {1}">
-                            <Binding Path="CurrentMusic.Artist" />
-                            <Binding Path="CurrentMusic.Album" />
-                        </MultiBinding>
-                    </Label>
+                            <MultiBinding StringFormat="{}{0} - {1}">
+                                <Binding Path="CurrentMusic.Artist" />
+                                <Binding Path="CurrentMusic.Album" />
+                            </MultiBinding>
+                        </Label>
 
-                </StackLayout>
+                    </StackLayout>
 
-                <!-- 歌词 -->
-                <CollectionView VerticalOptions="FillAndExpand"
+                    <!-- 歌词 -->
+                    <CollectionView VerticalOptions="FillAndExpand"
                                     x:Name="ListLyrics"
                                     EmptyView="暂无歌词"
                                     ItemsSource="{Binding Lyrics}"
                                     HorizontalOptions="Center"
                                     SelectionMode="None">
-                    <CollectionView.Behaviors>
-                        <toolkit:EventToCommandBehavior EventName="Scrolled"
+                        <CollectionView.Behaviors>
+                            <toolkit:EventToCommandBehavior EventName="Scrolled"
                                                         Command="{Binding LyricsScrolledCommand}"/>
 
-                    </CollectionView.Behaviors>
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate>
-                            <StackLayout HorizontalOptions="Center">
-                                <Label Text="{Binding Info}" 
+                        </CollectionView.Behaviors>
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <StackLayout HorizontalOptions="Center">
+                                    <Label Text="{Binding Info}" 
                                            Style="{StaticResource LyricItem}"/>
-                            </StackLayout>
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                </CollectionView>
+                                </StackLayout>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+                </StackLayout>
             </StackLayout>
 
             <StackLayout VerticalOptions="End">
                 <controls:Player x:Name="player"
-                             Margin="0,20,0,0"
                              IsMiniWhenPhone="False"/>
             </StackLayout>
         </StackLayout>
