--- a/src/ListenTogether/Pages/SettingsPage.xaml
+++ b/src/ListenTogether/Pages/SettingsPage.xaml
@@ -5,37 +5,42 @@
              xmlns:controls="clr-namespace:ListenTogether.Controls"
              xmlns:JiuLing="clr-namespace:JiuLing.Controls.Maui.Controls;assembly=JiuLing.Controls.Maui"
              x:Class="ListenTogether.Pages.SettingsPage"
-             Title="设置"
-             BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBackground},Light={StaticResource LightBackground}}">
+             Title="设置">
 
-    <StackLayout Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
+    <Grid BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBackground},Light={StaticResource LightBackground}}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
 
-        <StackLayout VerticalOptions="FillAndExpand"
+        <StackLayout Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
+
+            <StackLayout VerticalOptions="FillAndExpand"
                      MaximumWidthRequest="{OnPlatform  UWP=500,MacCatalyst=500}">
 
-            <StackLayout Margin="0,0,0,20"
+                <StackLayout Margin="0,0,0,20"
                      Orientation="Horizontal"
                      VerticalOptions="Start">
-                <Label Text="我的"
+                    <Label Text="我的"
                    VerticalTextAlignment="Center"
                    Style="{StaticResource Title}"/>
-                <ActivityIndicator Margin="10,0,0,0"
+                    <ActivityIndicator Margin="10,0,0,0"
                                    IsRunning="{Binding IsBusy}"
                                    HeightRequest="20"
                                    WidthRequest="20"
                                    VerticalOptions="CenterAndExpand"/>
-            </StackLayout>
+                </StackLayout>
 
-            <ScrollView VerticalOptions="FillAndExpand">
-                <StackLayout>
+                <ScrollView VerticalOptions="FillAndExpand">
+                    <StackLayout>
 
-                    <!--用户模块-->
-                    <StackLayout VerticalOptions="Start"
-                                 IsVisible="{Binding IsOnlineApp}">
-                        <!--未登录-->
+                        <!--用户模块-->
                         <StackLayout VerticalOptions="Start"
+                                 IsVisible="{Binding IsOnlineApp}">
+                            <!--未登录-->
+                            <StackLayout VerticalOptions="Start"
                                  IsVisible="{Binding UserInfo, Converter={StaticResource IsEqualConverter}}">
-                            <Button Text="登录/注册 >"
+                                <Button Text="登录/注册 >"
                                 FontSize="17"
                                 WidthRequest="120"
                                 BackgroundColor="Transparent"
@@ -43,142 +48,141 @@
                                 BorderWidth="1"
                                 HorizontalOptions="StartAndExpand"
                                 Command="{Binding GoToLoginCommand}"/>
-                        </StackLayout>
-                        <!--已登录-->
-                        <StackLayout VerticalOptions="Start"
+                            </StackLayout>
+                            <!--已登录-->
+                            <StackLayout VerticalOptions="Start"
                              Orientation="Horizontal"
                              IsVisible="{Binding UserInfo, Converter={StaticResource IsNotEqualConverter}}">
-                            <Image Source="{Binding UserInfo.Avatar}"
+                                <Image Source="{Binding UserInfo.Avatar}"
                            Aspect="AspectFill"
                            WidthRequest="64"
                            HeightRequest="64"
                            VerticalOptions="Center"
                            HorizontalOptions="Center"/>
 
-                            <StackLayout Margin="10,0,0,0"
+                                <StackLayout Margin="10,0,0,0"
                                  HeightRequest="64">
-                                <Label Margin="0,5,0,0"
+                                    <Label Margin="0,5,0,0"
                                Text="{Binding UserInfo.Nickname}"
                                VerticalOptions="Start"/>
-                                <Label Margin="0,0,0,5"
+                                    <Label Margin="0,0,0,5"
                                Text="{Binding UserInfo.Username,StringFormat='{}用户名：{0}'}"
                                VerticalOptions="EndAndExpand"/>
+                                </StackLayout>
                             </StackLayout>
                         </StackLayout>
-                    </StackLayout>
 
-                    <!--设置模块-->
-                    <StackLayout Margin="0,20,0,0">
-                        <Label Margin="0,0,0,20"
+                        <!--设置模块-->
+                        <StackLayout Margin="0,20,0,0">
+                            <Label Margin="0,0,0,20"
                                Text="设置"/>
 
-                        <!-- 常规设置 -->
-                        <Label Text="常规"
+                            <!-- 常规设置 -->
+                            <Label Text="常规"
                                FontAttributes="Bold"/>
 
-                        <JiuLing:TextSwitch Text="启动时检查更新（暂不可用）"
+                            <JiuLing:TextSwitch Text="启动时检查更新（暂不可用）"
                                             IsEnabled="False"
                                             IsToggled="False"/>
 
-                        <JiuLing:TextSwitch Text="深色主题（可能需要重启）"
+                            <JiuLing:TextSwitch Text="深色主题（可能需要重启）"
                                             IsToggled="{Binding IsDarkMode}"/>
 
-                        <!-- 搜索设置 -->
-                        <Label Margin="0,20,0,0"
+                            <!-- 搜索设置 -->
+                            <Label Margin="0,20,0,0"
                                Text="搜索"                               
                                FontAttributes="Bold"/>
-                        <JiuLing:TextSwitch Text="网易云音乐"
+                            <JiuLing:TextSwitch Text="网易云音乐"
                                             IsToggled="{Binding IsEnableNetEase}"/>
 
-                        <JiuLing:TextSwitch Text="酷我音乐"
+                            <JiuLing:TextSwitch Text="酷我音乐"
                                             IsToggled="{Binding IsEnableKuWo}"/>
-                        
-                        <JiuLing:TextSwitch Text="酷狗音乐"
+
+                            <JiuLing:TextSwitch Text="酷狗音乐"
                                             IsToggled="{Binding IsEnableKuGou}"/>
 
-                        <JiuLing:TextSwitch Text="咪咕音乐"
+                            <JiuLing:TextSwitch Text="咪咕音乐"
                                             IsToggled="{Binding IsEnableMiGu}"/>
 
-                        <JiuLing:TextSwitch Text="隐藏小于1分钟的歌曲"
+                            <JiuLing:TextSwitch Text="隐藏小于1分钟的歌曲"
                                             IsToggled="{Binding IsHideShortMusic}"/>
 
-                        <JiuLing:TextSwitch Text="添加到歌单时自动播放"
+                            <JiuLing:TextSwitch Text="添加到歌单时自动播放"
                                             IsToggled="{Binding IsPlayWhenAddToFavorite}"/>
 
-                        <!-- 播放设置 -->
-                        <Label Margin="0,20,0,0"
+                            <!-- 播放设置 -->
+                            <Label Margin="0,20,0,0"
                                Text="播放"                               
                                FontAttributes="Bold"/>
 
-                        <JiuLing:TextSwitch Text="仅在WIFI下播放未缓存的歌曲"
+                            <JiuLing:TextSwitch Text="仅在WIFI下播放未缓存的歌曲"
                                             IsToggled="{Binding IsWifiPlayOnly}"/>
 
-                        <JiuLing:TextSwitch Text="播放失败时自动跳到下一首"
+                            <JiuLing:TextSwitch Text="播放失败时自动跳到下一首"
                                             IsToggled="{Binding IsAutoNextWhenFailed}"/>
 
-                        <JiuLing:TextSwitch Text="播放我的歌单前清空播放列表"
+                            <JiuLing:TextSwitch Text="播放我的歌单前清空播放列表"
                                             IsToggled="{Binding IsCleanPlaylistWhenPlayMyFavorite}"/>
 
-                    </StackLayout>
+                        </StackLayout>
 
-                    <!--其它模块-->
-                    <StackLayout Margin="0,20,0,0">
-                        <Button Text="日志管理"
+                        <!--其它模块-->
+                        <StackLayout Margin="0,20,0,0">
+                            <Button Text="日志管理"
                                 Command="{Binding GoToLogCommand}"/>
-                        <Button Text="歌曲缓存"
+                            <Button Text="歌曲缓存"
                                 Margin="0,5,0,0"
                                 Command="{Binding GoToCacheCleanCommand}"/>
-                        <Button Text="退出账号"
+                            <Button Text="退出账号"
                                 Margin="0,5,0,0"
                                 IsVisible="{Binding UserInfo, Converter={StaticResource IsNotEqualConverter}}"
                                 IsEnabled="{Binding IsNotBusy}"
                                 Command="{Binding LogoutCommand}"/>
-                        <BoxView Margin="0,10,0,10"
+                            <BoxView Margin="0,10,0,10"
                                  HeightRequest="1"/>
 
-                        <!-- 关于 -->
-                        <StackLayout>
-                            <Label Text="一起听"
+                            <!-- 关于 -->
+                            <StackLayout>
+                                <Label Text="一起听"
                                    FontSize="18"
                                    HorizontalOptions="CenterAndExpand"/>
-                            <Label Margin="0,15,0,0"
+                                <Label Margin="0,15,0,0"
                                    Text="{Binding VersionString, StringFormat='{}版本：{0}'}"
                                    Style="{StaticResource Explain}"
                                    HorizontalOptions="CenterAndExpand"/>
-                            <Label Margin="0,5,0,0"
+                                <Label Margin="0,5,0,0"
                                    Text="检查更新"
                                    Style="{StaticResource Explain}"
                                    HorizontalOptions="CenterAndExpand">
-                                <Label.GestureRecognizers>
-                                    <TapGestureRecognizer Command="{Binding CheckUpdateCommand}"/>
-                                </Label.GestureRecognizers>
-                            </Label>
-                            <Label Margin="0,15,0,0"
+                                    <Label.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding CheckUpdateCommand}"/>
+                                    </Label.GestureRecognizers>
+                                </Label>
+                                <Label Margin="0,15,0,0"
                                    Text="本软件基于GPL-3.0协议，开源、免费"
                                    Style="{StaticResource Explain}"
                                    HorizontalOptions="CenterAndExpand"/>
-                            <Label Text="作者：九零"
+                                <Label Text="作者：九零"
                                    Style="{StaticResource Explain}"
                                    HorizontalOptions="CenterAndExpand"/>
-                            <Label Style="{StaticResource Explain}"
+                                <Label Style="{StaticResource Explain}"
                                    HorizontalOptions="CenterAndExpand"
                                    TextDecorations="Underline"
                                    Text="GitHub"
                                    TextColor="{AppThemeBinding Dark={StaticResource DarkLink},Light={StaticResource LightLink}}">
-                                <Label.GestureRecognizers>
-                                    <TapGestureRecognizer Command="{Binding OpenUrlCommand}"
+                                    <Label.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding OpenUrlCommand}"
                                                           CommandParameter="https://github.com/JiuLing-zhang/ListenTogether" />
-                                </Label.GestureRecognizers>
-                            </Label>
+                                    </Label.GestureRecognizers>
+                                </Label>
+                            </StackLayout>
                         </StackLayout>
                     </StackLayout>
-                </StackLayout>
-            </ScrollView>
-
+                </ScrollView>
+            </StackLayout>
         </StackLayout>
-        <controls:Player x:Name="player"
-                         Margin="0,20,0,0"
-                         VerticalOptions="End"
+        <controls:Player Grid.Row="1" 
+                         x:Name="player"
                          IsMiniWhenPhone="True"/>
-    </StackLayout>
+    </Grid>
 </ContentPage>
